plugins {
	id 'org.springframework.boot' version '2.1.3.RELEASE'
	id 'com.google.cloud.tools.jib' version '1.0.2'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

jib {
	from {
		image = 'openjdk:8u201-jre-alpine'
	}
	to {
		image = "registry.hub.docker.com/jsa4000/dataflow-${project.name}"
		credHelper = 'osxkeychain'
		tags = [version, 'latest']
	}
	container {
		jvmFlags = ['-XX:+UnlockExperimentalVMOptions',
					'-XX:+UseCGroupMemoryLimitForHeap',
					'-XX:+HeapDumpOnOutOfMemoryError',
					'-XX:MaxRAMFraction=2']
		ports = ['8080']
		useCurrentTimestamp = true
		labels = [ownerName: 'jsa4000',
				  projectName: project.name,
				  creationDate: System.nanoTime().toString()]
		//format = 'OCI'
	}
}